# new-ospgl

./: .gitattributes  .gitignore  .gitmodules  .luacheckrc  .luarc.json  :w  ASSIMP_LICENSE  CMakeLists.txt  LICENSE  NewOSP.sln  NewOSP.vcxproj  NewOSP.vcxproj.filters  NewOSP_project_suppressions.cfg  NewOSP_solution_suppressions.cfg  README.md  imgui.ini  launch.vs.json  settings.toml
.github/workflows/: c-cpp.yml
dep/: perlin.h  sol.hpp
dep/FastNoise/: FastNoise.cpp  FastNoise.h
dep/FastNoiseC/: FastNoise.c  FastNoise.h  FastNoiseArrays.h  README.md
dep/TextEditor/: TextEditor.cpp  TextEditor.h
dep/TextEditor/new/: TextEditor.cpp  TextEditor.h
dep/glad/: KHR.h  glad.c  glad.h
dep/glm/: INSTALL.vcxproj  INSTALL.vcxproj.filters  glm_dummy.vcxproj  glm_dummy.vcxproj.filters
dep/glm/detail/: func_exponential.inl
dep/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_internal.h
dep/nanovg/: fontstash.h  nanovg.c  nanovg.h  nanovg_ext.cpp  nanovg_gl.h
dep/sol/: config.hpp  sol.hpp
dep/stb/: stb_image.h  stb_impl.cpp
dep/tiny_gltf/: tiny_gltf.cpp  tiny_gltf.h
goodies/EasyUnicode/: EasyUnicode.ahk  README.txt
goodies/ospexporter/: __init__.py
ospm/: Fetch.cpp  Fetch.h  Help.h  Main.cpp  PkgInfo.h  define.h
ospm_src/: Fetch.cpp  Help.h  Main.cpp  define.h
ospm_src/dep/: httplib.h
pkg/: PackageMetadata.h
res/: default_planet.toml  test.lua  test_script.lua
res/.luadef/: config.json  plugin.lua
res/.luadef/definitions/: assets.lua  bullet.lua  debug_drawer.lua  editor.lua  flight_input.lua  game_database.lua  glm.lua  globals.lua  gui.lua  imgui.lua  input.lua  logger.lua  model.lua  nano_vg.lua  noise.lua  orbit.lua  plumbing.lua  renderer.lua  scene.lua  toml.lua  universe.lua  vehicle.lua
res/.luadef/script_types/: editor_script.lua  entity_script.lua  interface_script.lua  machine_script.lua  scene_script.lua  symmetry_script.lua
res/assimp_test/: package.toml
res/assimp_test/materials/: mat_test.toml
res/assimp_test/test/: hexelr.sturdy.gltf  part_test.toml  rad_decoupler.blend1  test.blend  test.blend.toml  test.blend1
res/core/: bootstrap.lua  default_planet.toml  events.lua  locale.lua  mat_default.toml  mat_gizmo.toml  mat_hover.toml  mat_pbr.toml  package.lua  package.toml  test.lua
res/core/categories/: all.toml  command.toml  engines.toml
res/core/entities/: base.lua  base_finder.lua  building.lua  g_launchpad_finder.lua  launchpad_finder.lua  vehicle.lua  vehicle_debug.lua
res/core/fonts/: FONTS  ProggySquare.fnt  ProggyTiny.fnt  ProggyTinySZ.fnt  fira_code_medium.fnt  fira_code_medium.png.toml  fira_code_medium_settings.bmfc  folder.toml
res/core/input/: rocket.toml
res/core/interfaces/: activable.lua  engine.lua  throttleable.lua
res/core/links/: simple_link.lua
res/core/machines/: capsule.lua  combustion_chamber.lua  decoupler.lua  engine.lua  lf_engine.lua  rcs_controller.lua
res/core/materials/: carbon_dioxide.toml  helium.toml  hydrogen.toml  methane.toml  oxygen.toml  water.toml
res/core/meshes/: editor_attachment.blend  editor_attachment.glb  editor_attachment.toml
res/core/plumbing_machines/: electric_pump.toml  junction_3.toml  junction_4.toml  oneway.toml  shutoff.toml
res/core/scenes/: base.lua  camera_util.lua  cameras.lua  common_ui.lua  esc_menu.lua  new_save_scene.toml  orbit_camera.lua  vehicle_spawner.lua
res/core/shaders/: debug.fs  debug.vs  font.fs  font.vs  gizmo.fs  gizmo.vs  hdr.fs  hdr.vs  hover.fs  hover.vs  pbr.fs  (+10 more)
res/debug_system/: package.toml
res/navball/: CREDITS.txt  navball.toml  package.toml
res/real_solar_system/: package.toml
res/rss/: package.toml
res/rss_textures/: package.toml
res/systems/: test_system.toml
res/test_parts/: package.toml
src/: BulletExperiments.cpp  EditorMain.cpp  Main.cpp  OSP.cpp  OSP.h  PartViewerMain.cpp  VehicleInWorld.cpp
src/assets/: Asset.h  AssetManager.cpp  AssetManager.h  AudioClip.cpp  AudioClip.h  BitmapFont.cpp  BitmapFont.h  BuildingPrototype.cpp  BuildingPrototype.h  Config.cpp  Config.h  Cubemap.cpp  Cubemap.h  Image.cpp  Image.h  Material.cpp  Material.h  Model.cpp  Model.h  PartPrototype.cpp  PartPrototype.h  PhysicalMaterial.cpp  PhysicalMaterial.h  Shader.cpp  Shader.h
src/atmosphere/: AtmosphereRenderer.cpp  AtmosphereRenderer.h
src/audio/: AudioEngine.cpp  AudioEngine.h  AudioSource.cpp  AudioSource.h  SampleSource.h
src/game/: GameState.cpp  GameState.h  GameStateDebug.cpp  GameStateDebug.h  Save.cpp  Save.h
src/gui/: GUICanvas.cpp  GUICanvas.h  GUIInput.cpp  GUIInput.h  GUILayout.cpp  GUILayout.h  GUIScreen.cpp  GUIScreen.h  GUIScrollbar.h  GUISkin.h  GUIWidget.h  GUIWindow.cpp  GUIWindow.h  GUIWindowManager.cpp  GUIWindowManager.h  Signal.h
src/lua/: BulletLuaData.h  LuaCore.cpp  LuaCore.h  LuaLib.h
src/physics/: RigidBodyUserData.h
src/planet_mesher/: PlanetMesherInfo.cpp  PlanetMesherInfo.h
src/renderer/: Drawable.h  GBuffer.cpp  GBuffer.h  LuaDrawable.cpp  LuaDrawable.h  PlanetaryBodyRenderer.cpp  PlanetaryBodyRenderer.h  Renderer.cpp  Renderer.h  RendererQuality.h
src/ui/: GUICanvas.cpp  GUICanvas.h  GUILayout.cpp  GUILayout.h  GUIWidget.h
src/universe/: CartesianState.h  Date.cpp  Date.h  Events.cpp  Events.h  PlanetarySystem.cpp  PlanetarySystem.h  PlanetarySystemSerializer.cpp  PlanetarySystemSerializer.h  ReferenceFrame.cpp  ReferenceFrame.h  SystemElement.h  SystemPointer.cpp  SystemPointer.h  Universe.cpp  Universe.h  UniverseDefinitions.h
src/util/: DebugDrawer.cpp  DebugDrawer.h  FileWatcher.h  InputUtil.h  Logger.cpp  Logger.h  LuaUtil.h  MathUtil.cpp  MathUtil.h  Profiler.cpp  Profiler.h  SerializeUtil.h  ThreadUtil.cpp  ThreadUtil.h  Timer.cpp  Timer.h  Timing.cpp  Timing.h  UTF8Util.h  defines.h
src/vehicle/: PackedVehicle.cpp  PackedVehicle.h  UnpackedVehicle.cpp  UnpackedVehicle.h  Vehicle.cpp  Vehicle.h  VehicleLoader.cpp  VehicleLoader.h
udata/: settings.toml  settings_lowend.toml
udata/input/: core_rocket.toml
udata/vehicles/: Test Vehicle.toml  backup.toml  debug.toml  saved.toml  test-vehicle.toml
(+502 files in other folders)
